# hochschultransformation-jetzt

./: .gitignore  README.md  Sidebar.md  conf.py  pyproject.toml
files/: Hochschultransformation_jetzt.tex  htj.tex
pages/: impressum.md  index.md  inspirationen.md  mitzeichnen-hidden.md  mitzeichnen.md  pressemitteilung.md  unterzeichnende.md
themes/lanyon/templates/: base.tmpl
